--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >-
   The ARRRmada is a link directory for all stores, service providers and companies 
   that accept ARRR as a payment.
 baseurl: "/" 
-url: "https://arrrmada.com/" #https://arrrmada.com 
+url: "https://arrrmada.com" #https://arrrmada.com 
 repo: https://github.com/ARRRmada/ARRRmada.com
 readme: https://github.com/ARRRmada/ARRRmada.com
 
