--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -13,3 +13,8 @@
 - donateARRR2.png
 - donateARRR4.png
 - donateARRR5.png
+- donatewitharrr.png
+- donationwhitegoldsilver.png
+- donationwhite.png
+- donationgold.png
+- donation1.png
