--- a/.github/workflows/static_build.yaml
+++ b/.github/workflows/static_build.yaml
@@ -36,3 +36,5 @@ jobs:
         git add _static/arrrrmada.zip
         git commit -m "Update _static/arrrrmada.zip" || echo "No changes to commit"
         git push origin main  # or the branch you are using
+      env:
+        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
