--- a/.github/workflows/static_build.yaml
+++ b/.github/workflows/static_build.yaml
@@ -35,6 +35,6 @@ jobs:
         git config --local user.name "GitHub Action"
         git add _static/arrrrmada.zip
         git commit -m "Update _static/arrrrmada.zip" || echo "No changes to commit"
-        git push origin main  # or the branch you are using
+        git push origin main
       env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
