--- a/.github/workflows/static_build.yaml
+++ b/.github/workflows/static_build.yaml
@@ -37,4 +37,4 @@ jobs:
         git commit -m "Update _static/arrrrmada.zip" || echo "No changes to commit"
         git push origin main
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
