Set global permalink structure

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
+permalink: /:path/:basename
 title: ARRRmada Directory - ARRR (Pirate Chain) accepted here
 keywords: cryptocurrency, privacy, pirate chain, arrr, fungible
 email: ARRRmada@pirate.black
