--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,11 @@
+- id: gJWuqNPE
+  name: "DataSafeInternational"
+  description: >
+    Privacy-based Cloud Backup of your data, servers, DBs & VMs. Datacenters in 19 countries. Encrypted, compressed, & private. No Contracts- Pay Privately, monthly.
+  image: "datasafe.png"
+  url: "https://www.datasafeinternational.com"
+  tags: [44, 45, 47, 57]  
+
 - id: 2MqaBNZQ
   name: "Physical Crypto Coins"
   description: >
