--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -2,7 +2,7 @@
   name: "DataSafeInternational"
   description: >
     Privacy-based Cloud Backup of your data, servers, DBs & VMs. Datacenters in 19 countries. Encrypted, compressed, & private. No Contracts- Pay Privately, monthly.
-  image: "datasafe.png"
+  image: "datasafe.webp"
   url: "https://www.datasafeinternational.com"
   tags: [44, 45, 47, 57]  
 
