--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,11 @@
+- id: tOy6KKPn
+  name: "Kemah Slingshot Rentals"
+  description: >
+    We rent starting by the hour & offer half day, full day as well as multi day options. We are a locally family owned and operated business.
+  image: "kemahslingshotrentals.webp"
+  url: "https://kemahslingshotrentals.com/"
+  tags: [7, 32, 35, 46, 51]  
+
 - id: gJWuqNPE
   name: "DataSafeInternational"
   description: >
