--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+permalink: /:path/:basename
 title: ARRRmada Directory - ARRR (Pirate Chain) accepted here
 keywords: cryptocurrency, privacy, pirate chain, arrr, fungible
 email: ARRRmada@pirate.black
