--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,11 @@
+- id: QlwEGNaa
+  name: "Cryptoken Board UÜ"
+  description: >
+    Cryptoken Board UÜ is cryptocurrency research and consulting boutique firm providing BIC services covering the blockchain sector & digital assets.
+  image: "kemahslingshotrentals.webp"
+  url: "https://cryptokenboard.com"
+  tags: [12, 57]  
+
 - id: tOy6KKPn
   name: "Kemah Slingshot Rentals"
   description: >
