--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -2,7 +2,7 @@
   name: "Cryptoken Board UÜ"
   description: >
     Cryptoken Board UÜ is cryptocurrency research and consulting boutique firm providing BIC services covering the blockchain sector & digital assets.
-  image: "kemahslingshotrentals.webp"
+  image: "cryptotokenboard.webp"
   url: "https://cryptokenboard.com"
   tags: [12, 57]  
 
