New Merchant Added: ELAN Healing System

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: Zdg7xuzv
+  name: "ELAN Healing System"
+  description: >
+    An online resource for people embracing transformation and embodying
+    deep health.
+  image: "elanhealing.webp"
+  url: "https://www.elanhealing.com/"
+  tags: [57, 16, 27, 35, 45]
+
 - id: QlwEGNaa
   name: "Cryptoken Board UÜ"
   description: >
