--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: cil7HctP
+  name: "The Ministry of Bending Reality"
+  description: >
+    The Ministry of Bending Reality follows Business Developer, Activist,
+    Author, Intuitive Consultant™, Historian and Name Reader™ Michael
+    Stephens.
+  image: "Bending-Reality-Logo.webp"
+  url: "https://www.bendingreality.is/"
+  tags: [3, 7, 56, 16, 27]
+
 - id: Zdg7xuzv
   name: "ELAN Healing System"
   description: >
