--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -4,7 +4,7 @@
     Selling t-shirts, magnets, stickers, & more! Able to do custom
     designs for printing. Also selling handcrafted soaps and lip balms.
     Let us know your needs!
-  image: "IMG_0991.jpeg"
+  image: "xeds-wonderland-emporium.webp"
   url: "https://www.xedsemporium.com"
   tags: [4, 9, 56, 26, 28, 31]
 
