Merchant added: Xed’s Wonderland Emporium, LLC (#20)
* Merchant Image Upload: ELAN Healing System

* New Merchant Added: ELAN Healing System

* Update merchants.yml

* Add files via upload

* Update merchants.yml

* Update merchants.yml

* Add files via upload

---------

Co-authored-by: scott-ftf <scott_fromthefuture@pm.me>

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: U6roIkln
+  name: "Xed’s Wonderland Emporium, LLC"
+  description: >
+    Selling t-shirts, magnets, stickers, & more! Able to do custom
+    designs for printing. Also selling handcrafted soaps and lip balms.
+    Let us know your needs!
+  image: "xeds-wonderland-emporium.webp"
+  url: "https://www.xedsemporium.com"
+  tags: [4, 9, 56, 26, 28, 31]
+
 - id: cil7HctP
   name: "The Ministry of Bending Reality"
   description: >
