Update merchants.yml A-Computer Service (ACS)

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: J6V72niK
+  name: "A-Computer Service (ACS)"
+  description: >
+    IT & Audio/Video services. All detailed info is on the
+    website.
+  image: "ACS_2023.resized.webp"
+  url: "https://qortal.link/ACS/EN"
+  tags: [57, 56, 12, 16, 44, 47]
+
 - id: U6roIkln
   name: "Xed’s Wonderland Emporium, LLC"
   description: >
