added What the Finance to merchants.yml

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: smYHsBdM
+  name: "What The Finance"
+  description: >
+    Read what others won't tell you. Independent journalism for
+    decentralized and traditional finance since 2008.
+  image: "wtf.webp"
+  url: "https://whatthefinance.com/"
+  tags: [7]
+
 - id: J6V72niK
   name: "A-Computer Service (ACS)"
   description: >
