--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: QqOSmv29
+  name: "Unicorn Horn PMA"
+  description: >
+    Making the Finest Holistic Health Products, Candles, Washes and Oils
+    on the Market
+  image: "dawningsart.webp"
+  url: "https://dawningsart.com"
+  tags: [20, 24, 27, 35]
+
 - id: smYHsBdM
   name: "What The Finance"
   description: >
