--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: qbxjGtb5
+  name: "BenBrok.com web design"
+  description: >
+    Affordable websites & web hosting for small businesses in
+    Portugal.
+  image: "benbrook.webp"
+  url: "https://benbrok.com/"
+  tags: [51]
+
 - id: P9u4C43i
   name: "Private Street"
   description: >
