--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: HgtEHFX7
+  name: "BrewBurgers"
+  description: >
+    We’re all about great food, fun times, and the best burgers in
+    Venice.
+  image: "brewburgers.webp"
+  url: "https://brewburgers.com/"
+  tags: [20]
+
 - id: qbxjGtb5
   name: "BenBrok.com web design"
   description: >
