New merchant: lbr-designs.nl

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: hLBZV2gk
+  name: "LBR designs"
+  description: >
+    LBR designs is a freelance graphic designer/all round DTP-er
+    based in the Netherlands run by Luuk BRouwers. Here to help people
+    in graphic design needs.
+  image: "lbrdesignslogo.webp"
+  url: "https://www.lbr-designs.nl"
+  tags: [26, 43, 45, 51]
+
 - id: HgtEHFX7
   name: "BrewBurgers"
   description: >
