New Merchant: bluedragon.consulting

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: peB48XzV
+  name: "Blue Dragon Consulting"
+  description: >
+    Your trusted partner for seamless business integration in Indonesia,
+    with a particular emphasis on business relocation and cryptocurrency
+    strategies.
+  image: "Blue_Dragon.webp"
+  url: "https://bluedragon.consulting/business/"
+  tags: [57, 12]
+
 - id: hLBZV2gk
   name: "LBR designs"
   description: >
