New Merchant: essentialoilwizardry.com

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: FgWHleis
+  name: "Essential Oil Wizardry"
+  description: >
+    The finest quality organic / wild crafted Essential Oils, Wizard
+    Alchemy Blends, Ceremonial and Therapeutic Oils, Ultrasonic
+    Tinctures & Botanical Perfumes.
+  image: "EssentialOilWizardry.webp"
+  url: "https://www.essentialoilwizardry.com"
+  tags: [27, 32, 35, 46]
+
 - id: peB48XzV
   name: "Blue Dragon Consulting"
   description: >
