--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1455,3 +1455,12 @@
   image: "rio.webp"
   url: "https://riograndeadventuresbigbend.com/"
   tags: [45, 50]
+  
+- id: LrB2nR56
+  name: "William Maderas Photography"
+  description: >
+    Any of my images can be purchased with Pirate Chain for less than the
+    fiat price in USD.Contact me directly for details.
+  image: "KayakAtSunset8319.jpg"
+  url: "https://www.williammaderas.com/Purchase-Digital-Art"
+  tags: [4]
