--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: yXXurM8X
+  name: "Mestizo Consultancy"
+  description: >
+    Our focus is to build and service an interconnected network of fully
+    decentralised independent suppliers, traders and people in a unique
+    ecosystem.
+  image: "mestizo.webp"
+  url: "https://ipfs.io/ipfs/QmRc6K2kebWmg2MWhPvFeo3iBTVX2APSvVwhLqhoiUhv7m/"
+  tags: [3, 57, 16, 39, 44, 45]
+
 - id: LrB2nR56
   name: "William Maderas Photography"
   description: >
