--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -5,7 +5,7 @@
     decentralised independent suppliers, traders and people in a unique
     ecosystem.
   image: "mestizo.webp"
-  url: "https://ipfs.io/ipfs/QmRc6K2kebWmg2MWhPvFeo3iBTVX2APSvVwhLqhoiUhv7m/"
+  url: "https://www.beepxtra.com/en/stores/United%20Kingdom/6021_mestizo-catering-consultancy"
   tags: [3, 57, 16, 39, 44, 45]
 
 - id: LrB2nR56
