New Merchant: Mestizo Catering Consultancy (#48)
* Add image Mestizo Catering

* add Mestizo Caterin webp

* Update merchants.yml

* Delete assets/img/merchants/mestizo.webp

* Merchant Image Upload: Mestizo Consultancy

* Update merchants.yml

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: yXXurM8X
+  name: "Mestizo Consultancy"
+  description: >
+    Our focus is to build and service an interconnected network of fully
+    decentralised independent suppliers, traders and people in a unique
+    ecosystem.
+  image: "mestizo.webp"
+  url: "https://www.beepxtra.com/en/stores/United%20Kingdom/6021_mestizo-catering-consultancy"
+  tags: [3, 57, 16, 39, 44, 45]
+
 - id: LrB2nR56
   name: "William Maderas Photography"
   description: >
