New Merchant: Overt Enigma

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: vIBGQDX2
+  name: "Overt Enigma"
+  description: >
+    Freelance IT services with over 30 years experience:
+    Privacy/Anonymity, Cybersecurity, Linux Systems Engineering,
+    Honest Money, and other special projects
+  image: "overt-enigma.webp"
+  url: "https://overtenigma.com/shop/"
+  tags: [3, 57, 12, 39, 44, 47]
+
 - id: yXXurM8X
   name: "Mestizo Consultancy"
   description: >
