Merchant added: guldentopveldwinkel.be

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,12 @@
+- id: vRB5UxFy
+  name: "Plattelandsbewoner"
+  description: >
+    Groentenpakket, soepgroenten, barbeque groenten, sla/rauwkost
+    groenten, verwerkte diepgevrorengroenten. advies in autonoom leven.
+  image: "guldentop.webp"
+  url: "https://www.guldentopveldwinkel.be"
+  tags: [20, 24]
+
 - id: vIBGQDX2
   name: "Overt Enigma"
   description: >
