--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,11 @@
+- id: ZncUurfD
+  name: "Callie's-Plant Kingdom Foods"
+  description: >
+    Organic Vegan restaurant Tomball, Texas
+  image: "callies.webp"
+  url: "https://callieskitchen.com/"
+  tags: [20]
+
 - id: qN89OmuM
   name: "Meile dVPN"
   description: >
