--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,13 @@
+- id: XuDF0EMP
+  name: "Jorge Mesa's Bass Player University"
+  description: >
+    Professional Bass Guitarist and teaching since the 20th Century!
+    Available for lessons or recordings. Music Theory, Guitar and
+    Ukulele and also lesson options.
+  image: "jorgemesa.webp"
+  url: "https://jorgemesamusic.com/"
+  tags: [7, 56, 16, 33, 45]
+
 - id: ZncUurfD
   name: "Callie's-Plant Kingdom Foods"
   description: >
