New merchant: medellin tours (#60)
* Update merchants.yml

* Add medellin-tours

--- a/_data/merchants.yml
+++ b/_data/merchants.yml
@@ -1,3 +1,11 @@
+- id: D1Btx75u
+  name: "Medellin Tours"
+  description: >
+    Book with us unforgettable experiences in Medellín and its
+    surroundings
+  image: "medellin-tours.webp"
+  url: "https://instagram.com/Medellin.Tours"
+  tags: [50]
 - id: XuDF0EMP
   name: "Jorge Mesa's Bass Player University"
   description: >
