--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ email: ARRRmada@pirate.black
 description: >- 
   The ARRRmada is a link directory for all stores, service providers and companies 
   that accept ARRR as a payment.
-baseurl: ""
-url: "https://arrrmada.com" #https://arrrmada.com 
+baseurl: "/ARRRmada.com"
+url: "https://kaiketzu.github.io"
 repo: https://github.com/ARRRmada/ARRRmada.com
 readme: https://github.com/ARRRmada/ARRRmada.com
 
