featured merchants + seo optimizations (#68)
* Update _config.yml



* Redesign payment gateways page with card layout and Pirate BTCPay featured section

* Fix baseurl for GitHub Pages

* Restore production config for arrrmada.com

* Redesign FAQ page with accordion, categories, and comprehensive guides

* Update _config.yml

* Fix HOME button z-index - ensure clickability above animations

* Fix: Update Pirate BTCPay links and improve mobile badge display

- Changed links from btcpayserver to pirate-btcpay repository
- Updated tagline to 'Self-hosted BTCPay Server for ARRR - Easy Docker setup'
- Added white-space: nowrap to featured-badge to prevent line breaks on mobile

* Add Featured Merchants section with auto-rotation

- Added Featured Merchants section with 3 tiers (Captain's Pick, Crew Favorite, New Arrival)
- Captain's Pick: Manually selected (currently Meile dVPN)
- Crew Favorite: Random active merchant on each build
- New Arrival: Automatically shows newest merchant
- Fully responsive design (3 columns → 1 column on mobile)
- SEO optimizations: Meta tags, Structured Data (JSON-LD), robots.txt
- Performance improvements: defer JavaScript, preconnect
- CSS optimizations and spacing adjustments

* Add Featured Merchants with mobile responsive optimizations

- Featured Merchants section with 3 tiers (Captain's Pick, Crew Favorite, New Arrival)
- Auto-rotation: Random active merchants and newest merchant
- Mobile responsive: Hide descriptions and tags on mobile
- Compact mobile layout with smaller images and buttons
- SEO improvements: Structured data, enhanced meta tags
- Performance optimizations: defer JS, preconnect
- Spacing and layout refinements

* Fix GitHub repo link in footer - use direct URL

* Reduce spacing between merchants section and footer

* Add Featured Merchants section with auto-rotation and responsive design

- Featured Merchants: Captain's Pick (manual), Crew Favorite (random active), New Arrival (newest)
- Fully responsive mobile desig

--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,42 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Add to _config.yml
 
-encoding: utf-8
-permalink: /:path/:basename
-title: ARRRmada Directory - ARRR (Pirate Chain) accepted here
-keywords: cryptocurrency, privacy, pirate chain, arrr, fungible
-email: ARRRmada@pirate.black
-description: >- 
-  The ARRRmada is a link directory for all stores, service providers and companies 
-  that accept ARRR as a payment.
-baseurl: ""
-url: "https://arrrmada.com"
-repo: https://github.com/ARRRmada/ARRRmada.com
-readme: https://github.com/ARRRmada/ARRRmada.com
-
+# Plugins for SEO
 plugins:
-  - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-feed
+
+# Sitemap Configuration
+sitemap:
+  exclude:
+    - /404.html
+    - /listing_decoder.html
+  changefreq: weekly
+  priority: 0.8
+
+# Feed Configuration  
+feed:
+  path: feed.xml
+  excerpt_only: false
+
+# SEO Tag Configuration
+twitter:
+  username: PirateARRRmada
+  card: summary_large_image
+
+social:
+  name: ARRRmada
+  links:
+    - https://twitter.com/PirateARRRmada
+    - https://discord.gg/piratechain
+    - https://github.com/ARRRmada/ARRRmada.com
+
+# Performance & SEO
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  profile: false
+  blanklines: false
+  ignore:
+    envs: [development]
